# DiscordBot2

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: README.md  join.rs  mod.rs  pic.rs  ping.rs  server.rs  voice.rs
