[package]
name = "DiscordBot2"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.2"
songbird = "0.4.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.5", features = ["blocking", "default", ] }
image = "0.25.2"
minifb = "0.27.0"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
