[package]
name = "DiscordBot2"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.2"
songbird = "0.4.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.5", features = ["blocking", "default", ] }
image = "0.25.2"
minifb = "0.27.0"
get_if_addrs = "0.5.3"
pcap = "2.0.0"
fs2 = "0.4.3"
libc = "0.2.155"
strum = "0.26.3"
strum_macros = "0.26.4"
regex = "1.10.5"
public-ip = "0.2.2"

[build-dependencies]
serenity = "0.12.2"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
