[package]
name = "DiscordBot2"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.2", features = ["gateway"] }
songbird = { version = "0.5.0", features = ["serenity", "native", "builtin-queue", "driver"]}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.5", features = ["blocking", "default", "json"] }
image = "0.25.2"
minifb = "0.27.0"
get_if_addrs = "0.5.3"
pcap = "2.0.0"
strum = "0.26.3"
strum_macros = "0.26.4"
regex = "1.10.5"
public-ip = "0.2.2"
sysinfo = "0.32.0"
serde_json = "1.0.117"
base64 = "0.22.1"

[dependencies.symphonia]
version = "0.5"
features = ["mp3", "aac", "flac", "wav"]  # include additional features if needed

[build-dependencies]
serenity = "0.12.2"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
